--- a/help.html
+++ b/help.html
@@ -7,7 +7,7 @@
 
 <h1>FAQ</h1>
 <h2>What do the colors in the clock mean?</h2>
-<p>Overview of the <a href="http://i.imgur.com/Zng2PoK.png">GW2Timer analog clock</a>. As you may know, world boss (WB) chains start exactly 15 minutes apart (X:00, X:15, X:30, X:45), and most of them don't take longer than 15 minutes to complete, so the chains can be neatly fitted into a clock's quadrants. The <strong>bright green</strong> mark is the current WB's start (<strong>dark green</strong> is the next), the <strong>orange</strong> mark is the minimum time it is completed (usually by a full map population), and the <strong>red</strong> mark is the average. If you waypoint to a WB after the red mark is passed, it's likely the boss is already dead. You should instead wait for the next one, which is the dark green mark. Also, don't wait too long during the green minute hand phase or the map instances with the WB running will get full and you'll be placed into an instance with the chain far behind or inactive.</p>
+<p>Overview of the <a href="http://i.imgur.com/Zng2PoK.png">GW2Timer analog clock</a>. As you may know, world boss (WB) chains start exactly 15 minutes apart (X:00, X:15, X:30, X:45), and most of them don't take longer than 15 minutes to complete, so the chains can be neatly fitted into a clock's quadrants. The <strong>bright green</strong> mark is the current WB's start (<strong>dark green</strong> is the next), the <strong>orange</strong> mark is the minimum time it is completed (usually by a full map population), and the <strong>red</strong> mark is the average. If you waypoint to a WB after the red mark is passed, it's likely the boss is already dead, and you'll be placed in a newer map instance with the chain still in the early events. Chains have a 15-20 minutes time limit to start the boss, so you can still make it, but you may miss the next boss because of the 15 minute per boss timeframe overlap.</p>
 
 <h2>What do the colors of the map lines mean?</h2>
 <p>Each different colored lines represent one &quot;step&quot;: one event, or multiple simultaneous events that are considered a single link in the meta event chain. The colors are ordered like the mnemonic ROYGBIV: Red, Orange, Yellow, Green, Blue, Indigo, Violet; so red is the first step in the chain, and green and blue are much later. You can click on the event name to be directed to the path, which were hand drawn to trace a player's progress or NPC route. A straight line through lots of obstacles means you should waypoint instead of walk there.</p>
@@ -24,7 +24,7 @@
 <hr />
 
 <h1>About</h1>
-<p>This web application runs entirely on the client's side, except for API calls to the GW2 server for map data. Few libraries/plugins were used to avoid bloat. It was tested on Firefox/Chrome 2013-2014 and Opera 2013, in 1024x768 through 1920x1200. IE10 or below is not recommended and kludges were <strong>not</strong> used to compensate for IE's flaws. Smartphone users with large screen can use this right panel as an &quot;app&quot; (minimum resolution 360x720).</p>
+<p>This web application runs entirely on the client's side, except for API calls to the GW2 server for map data. Few libraries/plugins were used to avoid bloat. It was tested on Firefox/Chrome 2013-2014 and Opera 2013, in 1024x768 through 1920x1200. IE10 or below is not recommended and kludges were <strong>not</strong> used to compensate for IE's flaws. Smartphone users with large screen can use this right panel as an &quot;app&quot; (minimum resolution 360x720). Google Analytics is used to collect visitor's system/browser/locale information; you can <a href="https://www.google.com/search?q=block+Google+Analytics">block it</a> if you wish.</p>
 <h2>History</h2>
 <p>The idea of GW2Timer stemmed from the dissatisfaction (pre-megaserver) of GW2Stuff's lack of individual event information. As a former PVE commander, I needed to know what will be the shortest meta event chain to lead the train to. Although GW2Stuff was excellent at telling people when bosses are happening, it did not reveal the hard work (the pre-events) that more knowledgeable people had to do. GW2Timer uses time statistics of individual events to predict when they will start and finish so players can more effectively manage their playtime.</p>
 <p>2013 December 13 - Inception<br />
@@ -32,10 +32,10 @@
 2014 April 11 - Statistics compilation done<br />
 2014 April 15 - Megaserver. Project stalled<br />
 2014 April 23 - Project resumed with updated stats<br />
-2014 May 14 - Site beta
+2014 May 15 - Site beta
 </p>
 
-<h2>Contact</h2>
+<h1>Forum/Contact</h1>
 <p>Use the <a href="http://forum.renaka.com/forum/368355/">forum</a> for questions/suggestions/reports. You can post as an unregistered guest.</p>
 
 <hr />
@@ -47,13 +47,13 @@
 <p>
 <a href="http://us.gw2stuff.com/">GW2 Stuff</a> - dependable and helpful timer<br />
 <a href="http://argos-soft.net/GW2">Argos Soft</a> - useful event map<br />
-<a href="http://divinitysreach.com">Divinity’s Reach</a> - comprehensive map completioner<br />
+<a href="http://divinitysreach.com">Divinity's Reach</a> - comprehensive map completioner<br />
 <a href="http://virtus-gilde.de/gw2map">gw2map</a> - promising path maker and viewer<br />
 <a href="http://howar31.github.io/GW2Timer/">howar31</a> - clean schedule timer
 </p>
 
 <h2>ArenaNet Copyright</h2>
-<p>© 2012 ArenaNet, Inc. All rights reserved. NCsoft, the interlocking NC logo, ArenaNet, Arena.net, Guild Wars, Guild Wars Factions, Factions, Guild Wars Nightfall, Nightfall, Guild Wars: Eye of the North, Eye of the North, Guild Wars 2, and all associated logos and designs are trademarks or registered trademarks of NCsoft Corporation. All other trademarks are the property of their respective owners.</p>
+<p>&#169; 2012 ArenaNet, Inc. All rights reserved. NCsoft, the interlocking NC logo, ArenaNet, Arena.net, Guild Wars, Guild Wars Factions, Factions, Guild Wars Nightfall, Nightfall, Guild Wars: Eye of the North, Eye of the North, Guild Wars 2, and all associated logos and designs are trademarks or registered trademarks of NCsoft Corporation. All other trademarks are the property of their respective owners.</p>
 
 <hr />
 
