--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
 </head>
 
 <body>
-	<noscript><span id="diaNoJSWarning">This web application requires JavaScript enabled.</span></noscript>
-	<div id="jsConsole"></div>
+	<div id="jsConsole">
+		If you can read this then maybe:<br />
+		- Your browser's adblocker may be blocking the leaflet.js map script; please whitelist it.<br />
+		- You have JavaScript disabled; this whole application runs on JavaScript!<br />
+		- Your browser does not have/allow localStorage; it is needed for storing options<br />
+	</div>
 	<iframe id="jsTTS"></iframe>
 	<main id="windowMain">
 	<div id="panelLeft" class="panelMain">
@@ -213,5 +217,14 @@
 	</main>
 	<!-- Misc third party scripts; load last for faster page load -->
 	<script type="text/javascript" src="plugins.js"></script>
+	<!-- Google Analytics -->
+	<script>
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	ga('create', 'UA-51018564-1', 'gw2timer.com');
+	ga('send', 'pageview');
+	</script>
 </body>
 </html>
