--- a/map.html
+++ b/map.html
@@ -98,12 +98,12 @@ Use your sword2/focus4 mesmer to do these quickly.
 <p><ins data-coord="[10024, 13443]">Troll Cave luminescent grub</ins>, <ins data-coord="[13094, 19731]">Southsun karka (suicidal but fast)</ins>, <ins data-coord="[11640, 13161]">QD ettins/bears/oakhearts</ins>,</p>
 
 <h2>Reviver</h2>
-If there are others doing the daily, you should revive to 20% then run to the next body, so everyone gets credit.
+If there are others doing the daily, you should revive to 20% then move to the next body, so more people can get credit.
 <p><ins data-coord="[7576, 17591]">Thaumanova Reactor</ins>, <ins data-coord="[6274, 15960]">Vandal's Claim</ins>, <ins data-coord="[14143, 13005]">The Bloodfields (the dead icons do not show)</ins></p>
 
 <h2>Karma Spender</h2>
 You may need to complete the heart before you can purchase.
-<p><ins data-coord="[6264, 16087]">Basic Salvage Kits</ins> , <ins data-coord="[18781, 21684]">Mithril Mining Pick</ins>, <ins data-coord="[19451, 21524]">Mithril Logging Axe</ins>, <ins data-coord="[17005, 21298]">Mithril Harvesting Sickle</ins>, <ins data-coord="[12821, 19438]">Orichalcum Mining Pick</ins>, <ins data-coord="[11427, 26183]">Orichalcum Logging Axe</ins>, <ins data-coord="[11327, 25777]">Orichalcum Harvesting Sickle</ins>, </p>
+<p><ins data-coord="[6264, 16087]">Basic Salvage Kits</ins> , <ins data-coord="[18781, 21684]">Mithril Mining Pick</ins>, <ins data-coord="[19451, 21524]">Mithril Logging Axe</ins>, <ins data-coord="[17005, 21298]">Mithril Harvesting Sickle</ins>, <ins data-coord="[12821, 19438]">Orichalcum Mining Pick</ins>, <ins data-coord="[11427, 26183]">Orichalcum Logging Axe</ins>, <ins data-coord="[11327, 25777]">Orichalcum Harvesting Sickle</ins>, <ins data-coord="[15095, 24672]">Obsidian Shard</ins></p>
 
 
 <h2>Miscellaneous</h2>
@@ -144,7 +144,7 @@ Simple jumps.
 	<dt data-coord="[22073, 9112]">Shattered Ice Ruins</dt><dd>Frostgorge ice cave with trolls  skelks oozes</dd>
 	<dt data-coord="[26258, 13026]">Crimson Plateau</dt><dd>Diessa grawl plateau with rocks and ruins</dd>
 	<dt data-coord="[25136, 12227]">Grendich Gamble</dt><dd>Diessa ruined Ascalonian tower climb</dd>
-	<dt data-coord="[25530, 13388]">Wall Breach Blitz</dt><dd>Diessa ruined Ascalonian wall climb</dd>
+	<dt data-coord="[25530, 13388]">Wall Breach Blitz</dt><dd>Diessa long Ascalonian wall climb</dd>
 	<dt data-coord="[25986, 10719]">Pig Iron Quarry</dt><dd>Fireheart suspended carts high over two hills</dd>
 	<dt data-coord="[16325, 24485]">Vizier's Tower</dt><dd>Straits coral climb up a tower</dd>
 	<dt data-coord="[11078, 29012]">Buried Archives</dt><dd>Cursed wall coral jump through risens eagles</dd>
