Added clock icon map view

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta charset="utf-8" />
 	<meta name="robots" content="index, follow, noarchive" />
 	<meta name="description" content="Timer map for world boss meta events and daily achievement guide." />
+	<meta name="google-site-verification" content="hPcBd74DxlBzpTu6wO6DkIcOVFLu9SOMT-GQ1MI3fbg" />
 
 	<!-- Stylesheets -->
 	<link rel="shortcut icon" type="image/x-icon" href="img/event/boss.png" />
@@ -47,7 +48,9 @@
 	<div id="panelRight" class="panelMain">
 		<!-- Clock
 		==================================================================== -->
-		<section id="paneClock" class="paneRight">
+		<section id="paneClock" class="paneRight"
+			title="Click the waypoint icon to copy to clipboard.&lt;br /&gt;
+			Green clock tick is chain start, orange tick is minimum time chain is predicted to finish, red tick is average.">
 			<div id="paneClockBackground"></div>
 			<div class="itemClockIcon">
 				<img id="itemClockIcon0" src="img/chain/tbd.png" alt="X:00 Event" />
