--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
 	<script type="text/javascript" src="zones.js"></script>
 	<script type="text/javascript" src="metas.js"></script>
 	<script type="text/javascript" src="gw2t.js"></script>
+<!-- Google Analytics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-51018564-1', 'gw2timer.com');
+  ga('send', 'pageview');
+
+</script>
 </head>
 
 <body>
@@ -137,10 +148,10 @@
 		<!-- Menu, if these IDs were changed, change the <article> tags' too
 		==================================================================== -->
 		<nav id="paneMenu" class="paneRight">
-			<div id="menuChains"></div>
-			<div id="menuMap"></div>
-			<div id="menuHelp"></div>
-			<div id="menuOptions"></div>
+			<div id="menuChains" title="Chains List"></div>
+			<div id="menuMap" title="Map and Dailies"></div>
+			<div id="menuHelp" title="Help and Guides"></div>
+			<div id="menuOptions" title="Options"></div>
 		</nav>
 		<!-- Content mini-pane
 		==================================================================== -->
@@ -221,14 +232,5 @@
 	</main>
 	<!-- Misc third party scripts; load last for faster page load -->
 	<script type="text/javascript" src="plugins.js"></script>
-	<!-- Google Analytics -->
-	<script>
-	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-	ga('create', 'UA-51018564-1', 'gw2timer.com');
-	ga('send', 'pageview');
-	</script>
 </body>
 </html>
