--- a/map.html
+++ b/map.html
@@ -85,13 +85,13 @@ Vets: <ins data-coord="[23240, 11685]">Spider Cave spiders</ins></p>
 <p><ins data-coord="[7576, 17591]">Thaumanova Reactor</ins>, <ins data-coord="[6510, 16998]">Toxal Bog</ins></p>
 
 <h2>Aquatic</h2>
-<p><ins data-coord="[23075, 14714]">Grawlenfjord</ins>, <ins data-coord="[11724, 12139]">Lake Delavan</ins>, <ins data-coord="[11030, 16632]">Quetzal Bay</ins>, <ins data-coord="[8418, 19985]">Loch Jezt</ins></p>
+<p><ins data-coord="[23047, 14192]">Grawlenfjord</ins>, <ins data-coord="[11724, 12139]">Lake Delavan</ins>, <ins data-coord="[11030, 16632]">Quetzal Bay</ins>, <ins data-coord="[8418, 19985]">Loch Jezt</ins></p>
 
 <h2>Ambient</h2>
 <p><ins data-coord="[12140, 13462]">Godslost Swamp</ins>, <ins data-coord="[15613, 17626]">Grand Barrier Isle</ins>, <ins data-coord="[22471, 14518]">Hangrammr Climb</ins>, WvW North Camp</p>
 
 <h2>Condition Remover</h2>
-<p><ins data-coord="[6274, 15960]">Vandal's Claim bandit mines</ins>, <ins data-coord="[29655, 12621]">Lowland Burns noxious branded plants</ins>, Toxic Offshoot events in Kessex Hills</p>
+<p><ins data-coord="[6274, 15960]">Vandal's Claim bandit mines</ins>, <ins data-coord="[29655, 12621]">Lowland Burns noxious branded plants</ins>, Kessex Hills Toxic Offshoot events, <ins data-coord="[11801, 28676]">Orr Melandru statues and risen rotmouths</ins></p>
 
 <h2>Dodger/Interrupter</h2>
 Use your sword2/focus4 mesmer to do these quickly.
