--- a/map.html
+++ b/map.html
@@ -17,7 +17,7 @@
 	<br />
 	<h2>Maguuma</h2>
 	<ul class="mapZones">
-<li data-coord="[8256, 18816]">Metrica Province</li>
+	<li data-coord="[8256, 18816]">Metrica Province</li>
 	<li data-coord="[5888, 20928]">Rata Sum</li>
 	<li data-coord="[10304, 18112]">Caledon Forest</li>
 	<li data-coord="[10432, 21120]">The Grove</li>
@@ -108,18 +108,18 @@ You may need to complete the heart before you can purchase.
 
 <h2>Miscellaneous</h2>
 <dl>
-	<dt>Activity<dt><dd>Go to the blue/red flag icon to start. These may be time consuming except for Crab Toss.</dd>
-	<dt>Costume Brawl<dt><dd>Ask map chat for brawl, they will usually not hit back.</dd>
+	<dt>Activity<dt><dd>Go to the blue/red flag icon in a city to start. These may be time consuming except for Crab Toss.</dd>
+	<dt>Costume Brawl<dt><dd>Ask map chat for brawl, kind people will usually not hit back.</dd>
 	<dt>Crafter<dt><dd>Refine materials you will use.</dd>
 	<dt>Dungeon<dt><dd>Do Citadel of Flame dungeon <a href="http://wiki.guildwars2.com/wiki/Citadel_of_Flame_(explorable)#Ferrah">Path 1</a> (Ferrah).</dd>
 	<dt>Events (Group/Regional/Mentor)<dt><dd>Do world bosses for profit, or Queensdale train for easiness. Or just ask for events in map chat.</dd>
 	<dt>Feast<dt><dd>Buy Rice in Bulk from any master chef in town.</dd>
 	<dt>Fractal Runner<dt><dd>Start a level 1 or 10 and enter/exit to Dessa's lab until you get the swamp fractal (only need to finish one fractal).</dd>
-	<dt>Laurel Vendor<dt><dd>Teleport to your own borderland and walk south. Relog to return to your previous spot.</dd>
+	<dt>Laurel Vendor<dt><dd>Teleport to your own borderland and walk south for the vendor. Relog to return to your previous spot.</dd>
 	<dt>Leveler<dt><dd>Do a dungeon, which gives about 3/4 full bar of XP.</dd>
 	<dt>Mystic Forgesmith<dt><dd>Buy 20 very cheap minor sigils on the Trading Post.</dd>
 	<dt>Personal Story<dt><dd>Progress your current character, or create a new human and run straight to the giant earth hands boss.</dd>
-	<dt>Recycler<dt><dd>Salvage white and blue items or light and heavy armors.</dd>
+	<dt>Recycler<dt><dd>Salvage white and blue named items or light and heavy armors.</dd>
 	<dt>Skill Point<dt><dd>Level up or consume your stashed Scrolls of Knowledge.</dd>
 	<dt>Story Dungeon<dt><dd>Play on a character that needs it. <a href="http://wiki.guildwars2.com/wiki/Caudecus's_Manor_(story)">Caudecus' Manor</a> may be the shortest.</dd>
 </dl>
@@ -128,11 +128,12 @@ You may need to complete the heart before you can purchase.
 <hr />
 
 <h1>Jumping Puzzles</h1>
-<p>The pins refer to the JP's entrance. JPs in each list are sorted by location. The description is just to remind you of which JP it is.</p>
+<p>The map pin refers to the JP's entrance. JPs in each list are sorted by location. The descriptions are just to remind you of which JP it is.</p>
+<button id="btnJPsUncheck">Uncheck All</button>
 
 <h2>Easy</h2>
 Simple jumps.
-<dl class="mapJPs">
+<dl class="mapJP">
 	<dt data-coord="[17399, 14591]">Urmaug's Secret</dt><dd>LA short climbs up cave cliff</dd>
 	<dt data-coord="[13202, 13674]">Demongrub Pits</dt><dd>Queensdale small cave with grubs and skelks</dd>
 	<dt data-coord="[12781, 15876]">The Collapsed Observatory</dt><dd>Kessex cave ruins with a long fall down</dd>
@@ -143,7 +144,7 @@ Simple jumps.
 	<dt data-coord="[20756, 20878]">Coddler's Cove</dt><dd>Timberline skip jump over quaggan lanterns</dd>
 	<dt data-coord="[22073, 9112]">Shattered Ice Ruins</dt><dd>Frostgorge ice cave with trolls  skelks oozes</dd>
 	<dt data-coord="[26258, 13026]">Crimson Plateau</dt><dd>Diessa grawl plateau with rocks and ruins</dd>
-	<dt data-coord="[25136, 12227]">Grendich Gamble</dt><dd>Diessa ruined Ascalonian tower climb</dd>
+	<dt data-coord="[25136, 12227]">Grendich Gamble</dt><dd>Diessa ruined Ascalonian stone tower climb</dd>
 	<dt data-coord="[25530, 13388]">Wall Breach Blitz</dt><dd>Diessa long Ascalonian wall climb</dd>
 	<dt data-coord="[25986, 10719]">Pig Iron Quarry</dt><dd>Fireheart suspended carts high over two hills</dd>
 	<dt data-coord="[16325, 24485]">Vizier's Tower</dt><dd>Straits coral climb up a tower</dd>
@@ -152,7 +153,7 @@ Simple jumps.
 <br />
 <h2>Medium</h2>
 Tricky jumps or interaction required
-<dl class="mapJPs">
+<dl class="mapJP">
 	<dt data-coord="[16300, 14605]">Troll's End</dt><dd>LA stalactite cave with planks</dd>
 	<dt data-coord="[17210, 15481]">Weyandt's Revenge</dt><dd>LA huge pirate themed cave</dd>
 	<dt data-coord="[16670, 14183]">Swashbuckler's Cove</dt><dd>Gendarran light the torches and swim in time</dd>
@@ -175,7 +176,7 @@ Tricky jumps or interaction required
 <br />
 <h2>Hard</h2>
 A marathon of intricate jumps.
-<dl class="mapJPs">
+<dl class="mapJP">
 	<dt data-coord="[15379, 14282]">Not So Secret</dt><dd>Gendarran trampolines aetherblade hideout</dd>
 	<dt data-coord="[9235, 18967]">Goemm's Lab</dt><dd>Metrica floating landmasses in the sky as asura stations</dd>
 	<dt data-coord="[10963, 19197]">Dark Reverie</dt><dd>Caledon nightmare court hideout jump across giant leaves</dd>
