Textual update, added dummy Golem event

--- a/help.html
+++ b/help.html
@@ -70,7 +70,7 @@
 	<dt>Max to Complete</dt><dd>The longest reasonable time it takes to complete (solo or small group)</dd>
 </dl>
 <br />
-<p>Some skills useful when doing almost all world bosses are: <a href="http://wiki.guildwars2.com/wiki/Condition#Traits_that_remove_conditions">Condition Removal</a>, <a href="http://wiki.guildwars2.com/wiki/Stun_break">Stun Break</a>, <a href="http://wiki.guildwars2.com/wiki/Invulnerability">Invulnerability</a>, <a href="http://wiki.guildwars2.com/wiki/Reflect">Missile Attacks Reflection</a>, and <a href="http://wiki.guildwars2.com/wiki/Range">Range</a></p>
+<p>Some skills useful when doing almost all world bosses are: <a href="http://wiki.guildwars2.com/wiki/Condition#Traits_that_remove_conditions">Condition Removal</a>, <a href="http://wiki.guildwars2.com/wiki/Stun_break">Stun Break</a>, <a href="http://wiki.guildwars2.com/wiki/Invulnerability">Invulnerability</a>, <a href="http://wiki.guildwars2.com/wiki/Reflect">Missile Attacks Reflection</a>, and <a href="http://wiki.guildwars2.com/wiki/Range">Range</a>. Bosses with a big distinct health bar cannot be critically hit, so the Precision and Ferocity attribute buffs are useless against them.</p>
 
 <h1>Scheduled Bosses</h1>
 
