--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	<iframe id="jsTTS"></iframe>
 	<main id="windowMain">
 	<div id="panelLeft" class="panelMain">
-		<!-- Map, the dummy space is required or Leaflet won't show
+		<!-- Map, the dummy nbsp is required or Leaflet won't show
 		==================================================================== -->
 		<section id="paneMap">&nbsp;
 			<div id="itemMapCoordinates">
@@ -60,7 +60,7 @@
 		<!-- Clock
 		==================================================================== -->
 		<section id="paneClock" class="paneRight"
-			title="Click the waypoint icon to copy to clipboard.&lt;br /&gt;
+			title="Click a waypoint icon to autocopy to clipboard.&lt;br /&gt;
 			Green clock tick is chain start, orange tick is minimum time chain is predicted to finish, red tick is average.">
 			<div id="paneClockBackground"></div>
 			<div class="itemClockIcon">
