--- a/map.html
+++ b/map.html
@@ -159,11 +159,11 @@ Tricky jumps or interaction required
 	<dt data-coord="[16670, 14183]">Swashbuckler's Cove</dt><dd>Gendarran light the torches and swim in time</dd>
 	<dt data-coord="[14340, 9666]">Fawcett's Bounty</dt><dd>Harathi pirate ship in an underground lake</dd>
 	<dt data-coord="[15726, 16423]">Professor Portmatt's Lab</dt><dd>Bloodtide number puzzle with underwater force fields</dd>
-	<dt data-coord="[11020, 19349]">Morgan's Leap</dt><dd>Caledon up a spiral tree and across rocks in the sky</dd>
+	<dt data-coord="[11020, 19349]">Morgan's Leap</dt><dd>Caledon spiral tree and floating rocks in the sky</dd>
 	<dt data-coord="[9492, 18652]">Spekks's Laboratory</dt><dd>Caledon asuran light platforms with lava below</dd>
 	<dt data-coord="[17958, 21624]">Conundrum Cubed</dt><dd>Maelstrom metallic floating cubes and electricity</dd>
 	<dt data-coord="[17545, 21917]">Hexfoundry Unhinged</dt><dd>Sparkfly destroyed and slanted Inquest platforms</dd>
-	<dt data-coord="[18077, 17118]">Griffonrook Run</dt><dd>Lornar's very high rock pillars with griffons</dd>
+	<dt data-coord="[18077, 17118]">Griffonrook Run</dt><dd>Lornar's steep griffons rock pillars</dd>
 	<dt data-coord="[19819, 17950]">Tribulation Rift Scaffolding</dt><dd>Dredgehaunt tall tower scaffold planks</dd>
 	<dt data-coord="[19718, 17986]">Tribulation Caverns</dt><dd>Dredgehaunt ice cave after the scaffold JP</dd>
 	<dt data-coord="[21080, 18861]">Only Zuhl</dt><dd>Timberline dredge/destroyer volcanic cave</dd>
@@ -179,7 +179,7 @@ A marathon of intricate jumps.
 <dl class="mapJP">
 	<dt data-coord="[15379, 14282]">Not So Secret</dt><dd>Gendarran trampolines aetherblade hideout</dd>
 	<dt data-coord="[9235, 18967]">Goemm's Lab</dt><dd>Metrica floating landmasses in the sky as asura stations</dd>
-	<dt data-coord="[10963, 19197]">Dark Reverie</dt><dd>Caledon nightmare court hideout jump across giant leaves</dd>
+	<dt data-coord="[10963, 19197]">Dark Reverie</dt><dd>Caledon nightmare court blue hideout jump across giant mushrooms</dd>
 	<dt data-coord="[21357, 21885]">Hidden Garden</dt><dd>Maelstrom unlock four element cantles. Keeper portal locations: <ins data-coord="[18335, 22125]">Earth</ins>, <ins data-coord="[19523, 22724]">Light</ins>, <ins data-coord="[20143, 22209]">Waves</ins>, <ins data-coord="[20770, 23385]">Winds</ins></dd>
 	<dt data-coord="[27345, 13106]">Chaos Crystal Cavern</dt><dd>Marches skip rocks jumps with transformations</dd>
 	<dt data-coord="[12780, 19377]">Skipping Stones</dt><dd>Southsun stones gushed up by geysers</dd>
