--- a/map.html
+++ b/map.html
@@ -136,9 +136,9 @@ Simple jumps.
 <dl class="mapJP">
 	<dt data-coord="[17399, 14591]">Urmaug's Secret</dt><dd>LA short climbs up cave cliff</dd>
 	<dt data-coord="[13202, 13674]">Demongrub Pits</dt><dd>Queensdale small cave with grubs and skelks</dd>
-	<dt data-coord="[12781, 15876]">The Collapsed Observatory</dt><dd>Kessex cave ruins with a long fall down</dd>
+	<dt data-coord="[12781, 15876]">The Collapsed Observatory</dt><dd>Kessex cave ruins behind a river</dd>
 	<dt data-coord="[13884, 20428]">Under New Management</dt><dd>Southsun short climb up the Consortium building</dd>
-	<dt data-coord="[10635, 20000]">Spelunker's Delve</dt><dd>Caledon giant mushrooms cave</dd>
+	<dt data-coord="[10635, 20000]">Spelunker's Delve</dt><dd>Caledon giant mushrooms water cavern</dd>
 	<dt data-coord="[22078, 13584]">Shamans Rookery</dt><dd>Wayfarer raven knockbacks from rock pillars</dd>
 	<dt data-coord="[21490, 12271]">King Jalis's Refuge</dt><dd>Snowden Priory site with looters</dd>
 	<dt data-coord="[20756, 20878]">Coddler's Cove</dt><dd>Timberline skip jump over quaggan lanterns</dd>
