Collapsed walkthroughs in help section

--- a/help.html
+++ b/help.html
@@ -36,7 +36,7 @@
 2014 May 15 - Site beta
 </p>
 
-<h1>Forum/Contact</h1>
+<h1>Contact</h1>
 <p>Use the <a href="http://www.reddit.com/r/gw2timer/">/r/gw2timer subreddit</a> or the <a href="http://forum.renaka.com/forum/368355/">forum</a> for questions/suggestions/reports; you can post as an unregistered guest at the forum.</p>
 
 <hr />
@@ -71,10 +71,12 @@
 	<dt>Max to Complete</dt><dd>The longest reasonable time it takes to complete (solo or small group)</dd>
 </dl>
 <br />
-<p>Some skills useful when doing almost all world bosses are: <a href="http://wiki.guildwars2.com/wiki/Condition#Traits_that_remove_conditions">Condition Removal</a>, <a href="http://wiki.guildwars2.com/wiki/Stun_break">Stun Break</a>, <a href="http://wiki.guildwars2.com/wiki/Invulnerability">Invulnerability</a>, <a href="http://wiki.guildwars2.com/wiki/Reflect">Missile Attacks Reflection</a>, and <a href="http://wiki.guildwars2.com/wiki/Range">Range</a>. Bosses with a big distinct health bar cannot be critically hit, so the Precision and Ferocity attribute buffs are useless against them.</p>
+<p>Some skills useful when doing almost all world bosses are: <a href="http://wiki.guildwars2.com/wiki/Condition#Traits_that_remove_conditions">Condition Removal</a>, <a href="http://wiki.guildwars2.com/wiki/Stun_break">Stun Break</a>, <a href="http://wiki.guildwars2.com/wiki/Invulnerability">Invulnerability</a>, <a href="http://wiki.guildwars2.com/wiki/Reflect">Missile Reflection</a>, and <a href="http://wiki.guildwars2.com/wiki/Range">Range</a>. Bosses with a big distinct health bar cannot be critically hit, so the Precision and Ferocity attribute buffs are useless against them.</p>
+<p>Click a header below to expand the walkthrough section.</p>
 
-<h1>Scheduled Bosses</h1>
 
+<header class="jsCollapsible"><img src="img/ui/scheduled.png" alt="Scheduled Bosses" />Scheduled Bosses</header>
+<div>
 <h2>Fire Elemental</h2>
 <p>Talk to <ins data-coord="[7876, 17644]">Rooba</ins> to get the chain started. Her golem will stroll through the reactor's center and a random room. Kill enemies and destroy green chaotic materials near the golem to protect it. Eventually the two will go the boss room where you'll have plenty of time to equip revive/heal/cleanse/stability skills for the burns and knockbacks FE will do. The boss will die quickly, the hardest part is avoiding the winds and aoe rings. After completing FE, usually the zerg will head to the reactor's <ins data-coord="[7587, 17619]">center</ins> to trigger the <a href="http://wiki.guildwars2.com/wiki/Defeat_the_misplaced_steam_ogre">Steam Ogre</a> event. (D3-5)</p>
 
@@ -110,10 +112,11 @@
 
 <h2>Tequatl and Triple Wurm</h2>
 <p>A mini-walkthrough will not suffice for these heavy coordination-required bosses. The TTS guild provides a guide for <a href="http://ttsgamers.com/strategy/tequatl/">Tequatl</a> and <a href="http://ttsgamers.com/strategy/great-jungle-wurm/">Triple Wurm</a> (D15-25)</p>
+</div>
 
 
-<h1>Unscheduled Bosses</h1>
-
+<header class="jsCollapsible"><img src="img/event/boss.png" alt="Unscheduled Bosses" />Unscheduled Bosses</header>
+<div>
 <h2>Fire Shaman</h2>
 <p>Jump through a <ins data-coord="[27494, 9876]">crevice</ins> in the obsidian wall to get to the boss. His phases are as follows: Minions -&gt; Boss -&gt; Minions -&gt; Boss -&gt; Minions -&gt; Boss. You can attack the boss normally, but during the minions phase, you have to kill enough minions for the boss to be attackable again. There is a hidden mechanic (or bug) where stepping near the giant <ins data-coord="[27415, 9639]">Fire Elemental</ins> will cause the event's progress to reset, so people should stay and kill minions near the heal bubble the charr allies made. Crossing the fire lines or attacking the boss is okay as long as nobody touches the giant Fire Elemental, but you should not take this chance as ignorant players will follow you and bungle it. This chain restarts after 25-35 minutes. (D15-25)</p>
 
@@ -125,9 +128,11 @@
 
 <h2>Eye of Zhaitan</h2>
 <p>Take the Rally Waypoint in Straits and run to the <ins data-coord="[15319, 24772]">claw-like structure</ins> in the minimap southeast of Balthazar Temple. Follow the path indicated to get to the catacombs and destroy the <ins data-coord="[15149, 24961]">coffins</ins>, then you'll need to kill three risens, which the hardest to solo is the <ins data-coord="[15309, 25088]">noble</ins>. After you have killed them and waited 15-25 minutes, the <ins data-coord="[16114, 24933]">AA gun and escort mission</ins> will follow, which should also be soloed else three deadly champion abominations will spawn for large groups. Once inside the catacombs, it will take 5-15 people to kill the <ins data-coord="[15192, 24961]">champion abomination</ins> that spawns in the room just before the coffin room. Its single strike will down most players, so strafe and dodge with invulnerability skills equipped. The final boss Eye of Zhaitan is a cakewalk, though you should kill the risen adds that may heal it. <ins data-coord="[15068, 24960]">Escort</ins> the NPCs out the west side of catacombs and the chain will restart in 9-12 minutes. (D3-5)</p>
+</div>
 
 
-<h1>Temples</h1>
+<header class="jsCollapsible"><img src="img/chain/temple.png" alt="Orr Temples" />Temples</header>
+<div>
 All temples drop 30 dragonite.
 
 <h2>Lyssa</h2>
@@ -159,10 +164,11 @@ All temples drop 30 dragonite.
 
 <h3>Balthazar Escort</h3>
 <p>The reason why this temple is the rarest to be open is Veteran Risen Subjugators. They have a ludicrous attack (heard as a warhorn) that conjures multiple scattered necro wells that nukes the pact NPCs in 2-3 seconds, and so instantly fails the chain that had been worked so hard on. The sharp turns in the Balthazar <ins data-coord="[15231, 24062]">final escort</ins> route indicates where the subjugators usually spawn (they have multiple random spawns), and there are about 4 waves of them. You should turn enemy names on always so you can quickly find and suppress the subjugators using <a href="http://wiki.guildwars2.com/wiki/Control_effect">crowd control</a> skills and prevent them from ever using their dooming attack. The priority of the mission should be: subjugators, any vets, healing/buffing the NPCs, then finally regular mobs. Once you have made it to the stone slope up to the <ins data-coord="[15046, 24546]">temple</ins>, you have pretty much succeeded the chain, unless the morale bar is 1% left. After the seizing the altar, the priest should be focused using range if the group is small, or melee if large, but nevertheless avoid and ignore the distracting abomination, and in short time the temple will be yours. It will remain open for 1.5-2 hours, until a powerful champion risen wraith comes to reap it back; if you should succeed, the temple will open for another 1-1.5 hours and loops the defense event, otherwise you will need to backtrack to the subchain to repeat Balthazar.</p>
+</div>
 
 
-<h1>Dungeons</h1>
-
+<header class="jsCollapsible"><img src="img/ui/dungeon.png" alt="Orr Temples" />Dungeons</header>
+<div>
 <h2>Gates of Arah (The Ruined City of Arah)</h2>
 <p>Although this chain does not reward a rare nor give dragonite, people still do it for the level 80 mobs. The chain starts when a player is near <ins data-coord="[11062, 27370]">Chan</ins>. To not scale the event, solo or duo it up until the <ins data-coord="[11005, 27891]">Anchorage camp</ins>, where you must climb two bone towers on the northeast and southeast corner of the camp to destroy the cauldrons up top, then you will need to quickly call for help in killing the champ knight before the time limit. With the camp secure, you can do any of the three concurrent events before the assault begin at the timer's end (or not do them at all), as completing each one bolsters the reinforcement. <ins data-coord="[11128, 27827]">Didi's</ins> event is the most useful as she will provide a durable golem to tank the champ giant ahead. Note that when any of the events on the promenade is active, the Arah dungeon (its waypoint) will be contested. Capturing the <ins data-coord="[11645, 27853]">promenade</ins> simply requires you to kill the risens in the capture circle, and you should avoid the deadly eye of zhaitan if your group is small. The final boss can be meleed, but you should mind the surrounding mobs and statue debuffs. A retake event will occur 1.5-2 hours after, and if succeeded will loop in 1-1.5 hours, else a grace defense event on Anchorage will happen which loops the retake event if succeeded, or restarts the chain in 8-10 minutes if failed.</p>
 
@@ -171,5 +177,7 @@ All temples drop 30 dragonite.
 
 <h2>Toil for the Coil (Crucible of Eternity)</h2>
 <p>Unlocking COE takes about 10 minutes from start to finish soloing, and much faster with a group. Start at the camp west of COE and follow the NPCs to do the <ins data-coord="[19954, 21625]">troll cave</ins>, then the assault will start back at the camp towards the <ins data-coord="[20555, 21919]">west entrance</ins> of COE (left side of the hexagon). If you somehow fail to reach COE, the chain will restart in 9 minutes. Else, you have unlimited time to clear the corners of the hexagon before a champ is spawned in the center, which is soloable if you dodge his slow missiles. COE will be open for 1.5-2 hours before a retake event at the <ins data-coord="[20978, 21894]">dungeon portal</ins> happens, which loops every 45 minutes if succeeded, or restarts the chain in 5-10 minutes if failed.</p>
+</div>
+<br />
 
 </div><!-- End of page -->
