Account for devices that goes to sleep

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 <body>
 	<div id="jsConsole">
 		If you can read this then <strong>maybe</strong>:<br />
+		- You are still loading the website (slowly); ignore this message.<br />
 		- Your browser's adblocker is blocking the leaflet.js map script; please whitelist it.<br />
 		- You have JavaScript disabled; this whole application runs on JavaScript!<br />
 		- This web application encountered a bug; try refreshing or <a href="bin/clear.html">clearing</a> its localStorage.<br />
@@ -219,7 +220,6 @@
 					<label title="Automatically scroll the map to the next predicted event. You'll need to be on the chains tab."><input id="opt_bol_tourPrediction" type="checkbox" /> Tour predicted events</label>
 					<label title="Show the colored lines of the event paths."><input id="opt_bol_showChainPaths" type="checkbox" /> Show chain paths</label>
 					<label><input id="opt_bol_showMap" type="checkbox" /> Show the map</label>
-					<label>Map pane minimum width (for small screens).<br />Refresh your browser to see change.<br />0px <input id="opt_int_resizeMapPaneWidth" type="range" min="0" max="720" step="12" /> 720px</label>
 					<br />
 					<h2>Alarm</h2>
 					<span>Text-to-Speech requires Chrome or Firefox. Female voice is only available for Chrome. Click the speaker icon above to toggle sound. When should the program announce the next boss?</span>
