--- a/map.html
+++ b/map.html
@@ -91,7 +91,7 @@ Vets: <ins data-coord="[23240, 11685]">Spider Cave spiders</ins></p>
 <p><ins data-coord="[12140, 13462]">Godslost Swamp</ins>, <ins data-coord="[15613, 17626]">Grand Barrier Isle</ins>, <ins data-coord="[22471, 14518]">Hangrammr Climb</ins>, WvW North Camp</p>
 
 <h2>Condition Remover</h2>
-<p><ins data-coord="[6274, 15960]">Vandal's Claim bandit mines</ins>, <ins data-coord="[29655, 12621]">Lowland Burns noxious branded plants</ins>, Kessex Hills Toxic Offshoot events, <ins data-coord="[11801, 28676]">Orr Melandru statues and risen rotmouths</ins></p>
+<p><ins data-coord="[29655, 12621]">Lowland Burns noxious branded plants</ins>, <ins data-coord="[6274, 15960]">Vandal's Claim bandit mines</ins>, Kessex Hills Toxic Offshoot events, <ins data-coord="[11801, 28676]">Orr Melandru statues and risen rotmouths</ins></p>
 
 <h2>Dodger/Interrupter</h2>
 Use your sword2/focus4 mesmer to do these quickly.
