TTS iframe refresh for all browsers

--- a/map.html
+++ b/map.html
@@ -95,7 +95,7 @@ Vets: <ins data-coord="[23240, 11685]">Spider Cave spiders</ins></p>
 
 <h2>Dodger/Interrupter</h2>
 Use your sword2/focus4 mesmer to do these quickly.
-<p><ins data-coord="[10024, 13443]">Troll Cave luminescent grub</ins>, <ins data-coord="[13094, 19731]">Southsun karka (suicidal but fast)</ins>, <ins data-coord="[11640, 13161]">QD ettins/bears/oakhearts</ins>,</p>
+<p><ins data-coord="[10024, 13443]">Troll Cave luminescent grub</ins>, <ins data-coord="[13094, 19731]">Southsun karka (suicidal but fast)</ins>, <ins data-coord="[29713, 12573]">Lowland Burns noxious branded plants</ins>, <ins data-coord="[11640, 13161]">QD ettins/bears/oakhearts</ins>,</p>
 
 <h2>Reviver</h2>
 If there are others doing the daily, you should revive to 20% then move to the next body, so more people can get credit.
